# octa

./: .auto_pipeline_state  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_v0_0_0.md  Dockerfile  README_v0_0_0.md  agent_state.md  docker-compose.redis.yml  download_aapl_1m.py  fx_77_symbols.txt  mlflow.db  pyproject.toml  requirements-ops.txt  retrain_monitor.sh  run_tws_autologin.sh  test_pipeline.py
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
OCTA_FIX_PACK/: 0001_paper_deploy_fix.patch  0002_broker_adapter.patch  MIGRATION_NOTES_0001_PAPER_DEPLOY.md  README.md
assets/: asset_map.yaml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: altdat.yaml  altdata.yaml  altdata_live.yaml  coverage.ini  drift.yaml  mypy.ini  pyproject.toml  pytest.ini  release.yaml  requirements-lock.txt  requirements-runtime.txt  requirements.txt  risk_overlay.yaml  robustness.yaml  ruff.toml  scoring.yaml  validation.yaml
configs/: aaon_targeted_discovery.yaml  asset_profiles_example.yaml  autonomous_paper.yaml  autopilot_daily.yaml  autopilot_smoke_etf.yaml  autopilot_smoke_future.yaml  autopilot_smoke_fx.yaml  autopilot_smoke_index.yaml  autopilot_smoke_stock.yaml  autopilot_test_100.yaml  autopilot_test_50.yaml  base.yaml  cascade_hf.yaml  dev.yaml  e2e_real_raw.yaml  e2e_real_raw_debug.yaml  execution_ibkr.yaml  foundation_validation.yaml  gate_overlay_relax.yaml  gate_overlay_relax_quality.yaml  hf_defaults.yaml  intraday_30m_entry.yaml  intraday_breakout.yaml  intraday_mean_reversion.yaml  (+16 more)
(+11773 files in other folders)
