[tool.poetry]
name = "octa-foundation"
version = "0.1.0"
description = "OCTA foundation monorepo skeleton (Tier-1 institutional starter)"
authors = ["Octa Platform <devops@octa.example>"]
license = "proprietary"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "==1.10.13"
PyYAML = "==6.0"
cryptography = "==41.0.3"
keyring = "==23.15.0"
ulid-py = "==1.1.0"
pandas = "==2.2.3"
pyarrow = "==11.0.0"

[tool.poetry.dev-dependencies]
pytest = "==7.4.0"
pytest-asyncio = "==0.23.8"
ruff = "==0.1.270"
mypy = "==1.6.1"
black = "==24.3.0"
bandit = "==1.8.2"
types-PyYAML = "==6.0.12.20241230"
types-psutil = "==5.9.5.20240316"
types-requests = "==2.31.0.20240406"
types-tqdm = "==4.66.0.20240417"
pandas-stubs = "==2.2.3.250308"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
